--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 .calib{
 	position: absolute;
-	border-style: solid;
+	border-style: dotted;
+	border-color: #a6ffbe;
+	border-width: 0.2px;
 	width:200px;
 	height:100px;
 	margin: 10px;
@@ -18,6 +20,7 @@
   width: 200px;
   height: 200px;
   border-style: solid;
+  border-color: #a6ffbe;
   margin: auto;
 }
 
@@ -26,6 +29,8 @@
   transition: opacity 0.5s ease-in-out;
   text-align: center;
   line-height: 1.5;
+  color: #a6ffbe;
+  opacity: 65%;
 }
 
 #instructions.fade-out {
@@ -35,3 +40,14 @@
 #instructions.fade-in {
   opacity: 1;
 }
+
+.circle {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  margin: 10px;
+  background-color: black;
+  position: absolute;
+  border: 1px solid #a6ffbe;
+}
+
