--- a/style.css
+++ b/style.css
@@ -33,6 +33,30 @@
   opacity: 65%;
 }
 
+#instructions2 {
+  opacity: 1;
+  text-align: center;
+  line-height: 1.5;
+  color: #a6ffbe;
+  opacity: 65%;
+}
+
+#instructions3 {
+  opacity: 1;
+  text-align: center;
+  line-height: 1.5;
+  color: #a6ffbe;
+  opacity: 65%;
+}
+
+#instructions4 {
+  opacity: 1;
+  text-align: center;
+  line-height: 1.5;
+  color: #a6ffbe;
+  opacity: 65%;
+}
+
 #instructions.fade-out {
   opacity: 0;
 }
