--- a/style.css
+++ b/style.css
@@ -9,10 +9,25 @@
 	background-size: cover;
 }
 
+@media screen and (max-width: 1024px) {
+  .calib {
+    width: 100px; /* Adjust width for tablet screens */
+    height: 50px; /* Allow height to adjust based on content */
+  }
+  .center {
+    font-size: 10px;
+    margin-top: -25%;
+  }
+  .center div {
+    width: 350px;
+  }
+}
+
 .center {
   position: fixed;
   top: 50%;
   left: 50%;
+  width: 400px;
   transform: translate(-50%, -50%);
 }
 
